[package]
name = "hyper-proxy"
version = "0.9.0"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
description = "A proxy connector for Hyper-based applications"

documentation = "https://docs.rs/hyper-proxy"
repository = "https://github.com/tafia/hyper-proxy"

readme = "README.md"
keywords = ["hyper", "proxy", "tokio", "ssl"]
categories = ["web-programming::http-client", "asynchronous", "authentication"]
license = "MIT"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["io-std", "io-util"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }

tower-service = "0.3"
http = "1"
futures-util = { version = "0.3", default-features = false }
bytes = "1"
hyper-tls = { version = "0.6", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.6", optional = true }
tokio-rustls = { version = "0.25", optional = true }
hyper-rustls = { version = "0.26", optional = true }
httparse = "1.8"

webpki = { version = "0.22", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
webpki-roots = { version = "0.26", optional = true }
headers = "0.4"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.33", features = ["full"] }
hyper = { version = "1", features = ["client", "http1"] }
http-body-util = "0.1.0"
bytes = "1"

[features]
openssl-tls = ["openssl", "tokio-openssl", "hyper-util/tokio"]
tls = ["tokio-native-tls", "hyper-tls", "native-tls"]
# note that `rustls-base` is not a valid feature on its own - it will configure rustls without root
# certificates!
rustls-base = ["tokio-rustls", "hyper-rustls", "webpki"]
rustls = ["rustls-base", "rustls-native-certs", "hyper-rustls/native-tokio"]
rustls-webpki = ["rustls-base", "webpki-roots", "hyper-rustls/webpki-tokio"]
default = ["tls"]
